--- a/package.json
+++ b/package.json
@@ -21,7 +21,8 @@
     "next": "13.1.6",
     "react": "18.2.0",
     "react-dom": "18.2.0",
-    "typescript": "4.9.5"
+    "typescript": "4.9.5",
+    "typewriter-effect": "^2.19.0"
   },
   "devDependencies": {
     "@types/aos": "^3.0.4",
